--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <main>
+        <div class="background">
+            <div class="circle"></div>
+        </div>
+    </main>
     <script src="js/script.js"></script>
   </body>
 </html>
