--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <main>
-        <div class="background">
-            <div class="circle"></div>
-        </div>
-    </main>
+    <div class="container">
+      <div class="start"><p>Start</p></div>
+      <div class="circle"></div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
